-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, jfx11
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8229433 | jfx11.0.4 | Arunprasad Rajkumar | P3 | Closed | Fixed | |
| JDK-8221457 | 8u221 | Arunprasad Rajkumar | P3 | Resolved | Fixed | b01 |
Currently subresource integrity check is not working in Linux and Windows due to missing implementation of `PAL::CryptoDigest` on those platforms. However it works in macOS because we rely on CommonCrypto based CryptoDigest implementation from WebCore.
The goal of this enhancement is to implement `PAL::CryptoDigest` using `java.security.MessageDigest`., so that the sub resource integrity can be supported across all the platforms.
The goal of this enhancement is to implement `PAL::CryptoDigest` using `java.security.MessageDigest`., so that the sub resource integrity can be supported across all the platforms.
- backported by
-
JDK-8221457 [WebView] Sub-resource integrity check fails on Windows and Linux
-
- Resolved
-
-
JDK-8229433 [WebView] Sub-resource integrity check fails on Windows and Linux
-
- Closed
-
- links to