8219917: [WebView] Sub-resource integrity check fails on Windows and Linux

Reviewed-by: shadzic, kcr