modules/javafx.web/src/test/resources/test/html/subresource-integrity-test.js
@@ -1,0 +1,3 @@
+window.onload = () => {
+    document.body.innerText = "hello";
+}
